kube-yaml/strimzi-kafka/kafdrop.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: "kafdrop"
  name: "kafdrop"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "kafdrop"
  strategy:
    type: "RollingUpdate"
  template:
    metadata:
      labels:
        app: "kafdrop"
    spec:
      containers:
      - env:
        - name: "JVM_OPTS"
          value: "-Xms32M -Xmx128M"
        - name: "SERVER_SERVLET_CONTEXTPATH"
          value: "/"
        - name: "KAFKA_BROKERCONNECT"
          value: "event-broker-kafka-bootstrap:9092"
        image: "registry.work.lan/kafdrop:3.30.0"
        imagePullPolicy: "IfNotPresent"
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: "/"
            port: 9000
            scheme: "HTTP"
          initialDelaySeconds: 180
          successThreshold: 1
        name: "kafdrop"
        ports:
        - containerPort: 9000
          name: "http"
          protocol: "TCP"
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: "/"
            port: 9000
            scheme: "HTTP"
          initialDelaySeconds: 180
          successThreshold: 1
        # resources:
        #   limits:
        #     cpu: "1"
        #     memory: "256Mi"
        #   requests:
        #     cpu: "0.2"
        #     memory: "256Mi"
        securityContext:
          privileged: false
---
apiVersion: "v1"
kind: "Service"
metadata:
  labels:
    app: "kafdrop"
  name: "kafdrop"
spec:
  ports:
  - name: "http"
    port: 9000
    protocol: "TCP"
    targetPort: 9000
  selector:
    app: "kafdrop"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafdrop
  labels:
    app: "kafdrop"
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: kafdrop.kube.loc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafdrop
            port:
              number: 9000
